--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,4 +3,8 @@ name = "custom_redis"
 version = "0.1.0"
 edition = "2024"
 
+
 [dependencies]
+serde = { version = "1.0", features = ["derive"] }
+bincode = "1.3"
+
